# easy-xml

./: Cargo.toml  LICENSE  README.md
easy-xml/: Cargo.toml
easy-xml-derive/: Cargo.toml
easy-xml-derive/src/: lib.rs  utils.rs
easy-xml-derive/src/de/: expand_enum.rs  expand_struct.rs  mod.rs
easy-xml-derive/src/se/: expand_enum.rs  expand_struct.rs  mod.rs
easy-xml/src/: de.rs  lib.rs  se.rs
easy-xml/tests/: attribute.rs  container.rs  enum.rs  flatten.rs  namespace.rs  param_enum.rs  skip.rs  text.rs  types.rs  value.rs
