[package]
name = "easy-xml-derive"
version = "0.1.0"
authors = ["qaqtutu <203524203@qq.com>"]
keywords = ["XML"]
description = "An XML library"
license = "MIT"
repository = "https://github.com/QAQtutu/easy-xml"
homepage = "https://github.com/QAQtutu/easy-xml"
readme = "../README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0.7"
 
[lib]
proc_macro = true
