[package]
name = "easy-xml"
version = "0.1.1"
authors = ["qaqtutu <203524203@qq.com>"]
keywords = ["XML"]
description = "An XML library"
license = "MIT"
repository = "https://github.com/QAQtutu/easy-xml"
homepage = "https://github.com/QAQtutu/easy-xml"
readme = "../README.md"
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xml-rs = "0.8.3"
easy-xml-derive = { version = "0.1.1", path = "../easy-xml-derive" }